Fix: moving lens views behind extension views (#1565)
* Moving lens-views behind extension views


* Setting z-index for all child elements of <main/>

--- a/src/renderer/components/cluster-manager/cluster-manager.scss
+++ b/src/renderer/components/cluster-manager/cluster-manager.scss
@@ -9,6 +9,10 @@
     grid-area: main;
     position: relative;
     display: flex;
+
+    > * {
+      z-index: 1;
+    }
   }
 
   .ClustersMenu {
